--- a/style.css
+++ b/style.css
@@ -190,7 +190,9 @@ h1.cursor::after {
 {
     /* text-align: center; */
   padding: 10px 0;
-  font-size: 2rem;
+  font-size: 2.2rem;
+      text-shadow: 0 3px 5px #0077b5;
+    font-family: 'Century Gothic', sans-serif;
 }
 
 /*
@@ -240,14 +242,14 @@ h1.cursor::after {
 } */
 
 
-.projects{
+/* .projects{
     text-align: center;
     left: 0;
     color: #0077b5;
     text-shadow:  0 2px 5px beige;
     font-size: 2rem;
     font-family: consolas;
-}
+} */
 
 
 
@@ -525,7 +527,7 @@ h1.cursor::after {
     display: inline-block;
     vertical-align: middle;
     margin: 0px 30px;
-    border: 1px solid #0077b5;
+    border: 1px  solid #0077b5;
     border-radius: 20px;
     box-shadow: 1rem 1rem 1rem -1rem #0077b5;
    
@@ -668,6 +670,7 @@ border-bottom-right-radius: 20px;
     padding: 10px;
     border-radius: 20px;
     background: rgba(230, 212, 212, 0.3);
+    /* background: rgba(0,0,0,.9); */
     left: 27%;
     align-items: center;
     width: 46%;
@@ -678,7 +681,7 @@ border-bottom-right-radius: 20px;
     text-align: center;
     font-size: 4rem;
     text-shadow:  0 1px 2px #0077b5;
-    box-shadow: 2rem 2rem 2rem -2rem #0077b5;
+    /* box-shadow: 2rem 2rem 2rem -2rem #0077b5; */
 }
 /* 
 .skills h7{
